dd annotations
